feat: added swagger annotations for symbols
